drivers: sensor: INA219: added support
This adds support for the TI INA219 Zero-Drift, Bidirectional
Current/Power Monitor with I2C Interface

Signed-off-by: Leonard Pollak <leonardp@tr-host.de>

--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -114,6 +114,8 @@ source "drivers/sensor/iis3dhhc/Kconfig"
 
 source "drivers/sensor/isl29035/Kconfig"
 
+source "drivers/sensor/ina219/Kconfig"
+
 source "drivers/sensor/ism330dhcx/Kconfig"
 
 source "drivers/sensor/lis2dh/Kconfig"
